# moos-ivp-rturrisi

./: .gitignore  LICENSE  README.md
MWDataMgr/: MWDataMgr.py
missions/alder/: alder.bhv  alder.moos  alder.moos++  alder_orig.bhv
missions/alpha_convoy/: plug_pHelmIvP.moos  vnames.txt  vpositions.txt
missions/attic/lab_03/: xrelay.moos
missions/attic/lab_05/alpha_return/: alpha.moos
missions/attic/lab_05/alpha_return_now/: alpha.moos
missions/attic/xrelay/: xrelay.moos
missions/convoy_baseline/: agent_configurations.txt  analyze.py  blaunch.sh  clean.sh  gen_positions.py  gen_variables.py  generator_set1_configs.py  generator_set1_params.py  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  nuke_moos  plug_bhv_variables.moos  plug_circuit.moos  post_process.sh  readme.md  run_blaunch_ex.sh  sync_group_logs.sh
missions/convoy_baseline/generators/: generator_set1_params.py
missions/convoy_baseline/mdm/: mw_directory_conversion.sh
missions/convoy_baseline/mwmgr/: mw_ix.cfg
missions/convoy_mod/: launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv
missions/convoy_muster/: README  clean.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uProcessWatch.moos
missions/lab_03/: db_and_uxms.moos
missions/lab_05/bravo_loiter/: bravo.bhv  launch.sh
missions/lab_05/bravo_uuv_fair/: bravo_surface.bhv
missions/lab_05/bravo_uuv_odometry/: bravo_uuv.moos
missions/lab_06/henry_gilda_auto_refuel/: meta_shoreside.moos  meta_vehicle.moos
missions/lab_06/henry_gilda_refuel/: meta_shoreside.moos  targ_gilda.moos
missions/lab_06/xrelay_pshare/: launch_apples.sh  xrelay_apples.moos
missions/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.bhv  plug_uSimMarine.moos
missions/lab_08/distributed_tsp_replan/: clean.sh  launch_shoreside.sh  plug_pGenPath.moos  plug_uFldNodeBroker.moos
missions/lab_10/alpha_range_pulse/: alpha.bhv
missions/lab_13/rescue/: .LastOpenedMOOSLogDirectory  meta_shoreside.moos  meta_vehicle.bhv  targ_abe.bhv  targ_abe.moos  targ_shoreside.moos  vpositions.txt
missions/lab_13/rescue_baseline/: launch.sh  launch_vehicle.sh  meta_shoreside.moos  mit_03.txt  plug_iM300.moos
missions/lab_13/rescue_baseline2/: launch.sh  launch_shoreside.sh  meta_shoreside.moos  meta_vehicle.moos  mit_00.txt  mit_a.txt  mit_b.txt  mit_c.txt  mit_e.txt  plug_iM300.moos  plug_pHelmIvP.moos
missions/lab_3/: .LastOpenedMOOSLogDirectory  pxrelay.moos  utscript.moos  utscript_rturrisi.moos
missions/lab_5/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_5/bravo_loiter_dbl/: bravo_dbl.bhv  bravo_dbl.moos  launch.sh
missions/lab_5/bravo_loiter_uuv/: bravo_uuv.bhv  bravo_uuv.moos
missions/lab_5/bravo_uuv_odometry/: bravo_uuv.bhv  launch.sh
missions/lab_5/bravo_uuv_surface/: bravo_surface.bhv  bravo_surface.moos
missions/lab_6/alpha_bravo_pshare/: alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_6/alpha_pshare/: alpha.moos  shoreside.moos
missions/lab_6/henry_gilda_auto_refuel/: launch.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_uTimerScript.moos
missions/lab_6/henry_gilda_baseline/: meta_vehicle.moos
missions/lab_6/henry_gilda_refuel/: .LastOpenedMOOSLogDirectory  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uTimerScript.moos  targ_gilda.bhv  targ_henry.moos  targ_shoreside.moos
missions/lab_6/xrelay_pshare/: launch.sh  launch_pears.sh  xrelay.moos  xrelay_apples.moos  xrelay_pears.moos
missions/lab_7/distributed_tsp/: TODO  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  plug_pGenPath.moos  plug_uFldNodeBroker.moos  plug_uSimMarine.moos  plug_uTimerScript.moos
missions/lab_8/distributed_tsp_replan/: TODO  cmds.txt  meta_shoreside.moos  meta_vehicle.bhv  plug_pMarinePID.moos  plug_uSimMarine.moos
missions/lab_8/lab_8_baseline/: cmds.txt
missions/lab_9/charlie_dana_reassign/: launch.sh  meta_shoreside.moos  plugs.moos  todo
scripts/: nuke_moos  nuke_moos2
src/: CMakeLists.txt
src/app_pickposx/: PickPosx.cpp
src/attic/lib_behaviors-test/: BHV_Pulse.cpp  CMakeLists.txt
src/attic/pGenPath/: GenPath.cpp  GenPath_Info.cpp  main.cpp
src/attic/pGenRescue/: GenRescue.cpp
src/attic/pHydrolink/: CMakeLists.txt  Hydrolink.h  Hydrolink_Info.cpp  main.cpp
src/attic/pOdometry/: Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/attic/pOdometryUUV/: OdometryUUV.h  main.cpp  pOdometryUUV.moos
src/attic/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign_Info.cpp  PointAssign_Info.h
src/lib_behaviors-test/: BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_convoypd/: BHV_ConvoyPD.cpp  BHV_ConvoyPD.h  CMakeLists.txt  ConvoyPointQueue.h
src/lib_bhv_convoyz/: BHV_ConvoyV21Z.cpp  BHV_ConvoyV21Z.h  CMakeLists.txt
src/lib_bhv_task_cnvy_convoy_1/: BHV_TaskConvoy1.cpp  BHV_TaskConvoy1.h  CMakeLists.txt
src/lib_bhv_task_cnvy_convoy_2/: BHV_TaskConvoy2.cpp  BHV_TaskConvoy2.h  CMakeLists.txt
src/lib_bhv_task_cnvy_convoy_3/: BHV_TaskConvoy3.cpp  BHV_TaskConvoy3.h  CMakeLists.txt  README
src/lib_bhv_task_cnvy_waypt_1/: BHV_TaskWaypoint1.cpp  BHV_TaskWaypoint1.h
src/lib_bhv_task_cnvy_waypt_2/: BHV_TaskWaypoint2.cpp  BHV_TaskWaypoint2.h  CMakeLists.txt
src/lib_bhv_task_cnvy_waypt_3/: BHV_TaskWaypoint3.cpp  BHV_TaskWaypoint3.h  CMakeLists.txt  README  lib_heron_path_predictor.hpp
src/lib_convoyz/: CMakeLists.txt
src/pGenPath/: GenPath.cpp  GenPath.h  GenPath_Info.h  pGenPath.moos
src/pGenRescue/: CMakeLists.txt  GenRescue.h  GenRescue_Info.cpp  GenRescue_Info.h  main.cpp
src/pHydrolink/: Hydrolink.cpp  Hydrolink_Info.h  pHydrolink.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp  pOdometry.moos
src/pOdometryUUV/: CMakeLists.txt  OdometryUUV.cpp  OdometryUUV.h  OdometryUUV_Info.cpp  OdometryUUV_Info.h
src/pPointAssign/: PointAssign.h  main.cpp  pPointAssign.moos
src/pXRelayTest/: Relayer.cpp  Relayer.h  pXRelayTest.moos
(+46 files in other folders)
